fix: quz page on smaller phones

--- a/src/pages/QuizPage/QuizPage.styles.css
+++ b/src/pages/QuizPage/QuizPage.styles.css
@@ -104,3 +104,9 @@
 /* .question-numbers{
     margin: 0 auto;
 } */
+
+@media only screen and (max-width: 815px) {
+    .quiz-container {
+        height: 100%;
+    }
+}
